edited edit tag names
